# herdr-harness-coordinator

./: AGENTS.md  CONTEXT.md  Cargo.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  live-acceptance.md  live-evidence-2026-07-18.md  live-evidence-2026-07-19.md
docs/adr/: 0002-stage-managed-writes-before-publication.md
docs/research/mvp/: codex-app-server-host-contract.md  herdr-pane-plugin-control-contract.md  omp-rpc-host-contract.md  repository-safety-contract.md
migrations/: 0001_initial.sql  0002_task_approval.sql  0007_host_recovery_and_presentation.sql  0008_host_settlement_evidence.sql
plugin/herdr-harness-coordinator/assets/: README.md
plugin/herdr-harness-coordinator/scripts/: supervisor  worker
schemas/: harness-launch-profile-v3.schema.json
scripts/: validate-contracts.mjs
scripts/live-acceptance/: README.md  capture-evidence.sh  codex-supervisor-omp-worker.sh  crash-recovery.sh  omp-supervisor-codex-worker.sh  provider-proof.txt  setup.sh  start-flow.sh
scripts/live-acceptance/profiles/: codex-sol.toml  omp-kimi.toml
src/: activation.rs  adapter.rs  attachment.rs  broker.rs  contract.rs  core.rs  herdr.rs  host.rs  host_presence.rs  lib.rs  main.rs  mcp.rs  process_adapter.rs  profile.rs  repository.rs  supervisor_host.rs
tests/: attachment_store.rs  broker_jsonl.rs  coordinator_core.rs  herdr_integration.rs  host_runtime.rs  launch_profile.rs  mcp_bridge.rs  process_adapter.rs  repository_observation.rs  workspace_activation.rs
