[package]
name = "herdr-harness-coordinator"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "Durable coordination for autonomous harnesses running in Herdr panes"
license = "MIT"

[lib]
name = "herdr_harness_coordinator"

[[bin]]
name = "herdr-harness-coordinator"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
hex = "0.4"
regex = "1.11"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid", "json"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v7"] }

[dev-dependencies]
tempfile = "3.23"

[lints.rust]
future_incompatible = "warn"
nonstandard_style = "deny"
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = 10 }
pedantic = { level = "warn", priority = 3 }
redundant_clone = "deny"
